feat(matching): 활성 요청 guard와 대기열 구현
사용자당 활성 요청 1개를 강제하고 guard 획득과 대기열 등록을 한 Lua로 묶는다 (INV-1).
해제는 compare-and-delete라 늦게 도착한 취소가 새로 등록한 요청을 지우지 못한다.
100건 동시 요청에서 정확히 1건만 통과하는 것을 통합 테스트로 고정했다.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01U7oD3N5Hx8baF5QEhYSVpx